--- a/QuanLyGara.csproj
+++ b/QuanLyGara.csproj
@@ -71,6 +71,12 @@
     <Compile Include="DangNhap.Designer.cs">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="DanhSachXe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DanhSachXe.Designer.cs">
+      <DependentUpon>DanhSachXe.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,11 +95,20 @@
     <Compile Include="PhieuSuaChua.Designer.cs">
       <DependentUpon>PhieuSuaChua.cs</DependentUpon>
     </Compile>
+    <Compile Include="PhieuThuTien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PhieuThuTien.Designer.cs">
+      <DependentUpon>PhieuThuTien.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan.cs" />
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DanhSachXe.resx">
+      <DependentUpon>DanhSachXe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -103,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PhieuSuaChua.resx">
       <DependentUpon>PhieuSuaChua.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PhieuThuTien.resx">
+      <DependentUpon>PhieuThuTien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
